--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,46 @@
+html, body, #root, .Main {
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  color: #fff;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  background-color: #383838;
+}
+
+html.wf-active body {
+  font-family: 'Raleway', 'Helvetica', 'Arial', sans-serif;
+}
+
+.Main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Main-headline {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-size: 4rem;
+  text-align: center;
+}
+
+.Main-subhead {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.Main-subhead em {
+  font-weight: 500;
+}
+
+.Main-button {
+  margin: 2em 0;
+  padding: 1em 2em;
+  border: 2px solid #fff;
+  color: #fff;
+  font-size: 1.25rem;
+  background-color: transparent;
+  text-decoration: none;
 }
